--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "dotenv": "^4.0.0",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "express-jwt": "^5.3.0",
     "express-session": "^1.15.2",
     "forms": "^1.3.0",
     "fs": "0.0.1-security",
     "http": "0.0.0",
     "jsonwebtoken": "^7.4.0",
+    "jwks-rsa": "^1.1.1",
     "mongodb-uri": "^0.9.7",
     "mongoose": "^4.9.6",
     "mongoose-find-one-or-create": "^0.2.0",
